z-index fix

--- a/frontend/assets/less/site.less
+++ b/frontend/assets/less/site.less
@@ -4537,3 +4537,9 @@ margin-bottom:50px;}
 .txt table tr:first-of-type {
     background: #ffb300;
 }
+
+@media screen and (max-width: 991px) {
+    .c_032 .col-6 {
+        padding-left: 15px;
+    }
+}
